database-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - name: auth-db
        image: postgres:10
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: auth-db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
spec:
  type: ClusterIP
  ports:
  - port: 5432
  selector:
    app: auth-db
