todo-db-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
      - name: todo-db
        image: postgres:10
        ports:
        - containerPort: 5433
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        hostPath:
          path: /data/auth-db
          type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: todo-db
spec:
  type: ClusterIP
  ports:
  - port: 5433
  selector:
    app: todo-db
