microservice-Ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - host: yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: todo
            port:
              number: 5000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8000
